--- a/user_auth_system/frontend/index.html
+++ b/user_auth_system/frontend/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="User authentication system with React and TypeScript" />
     <meta name="author" content="Your Name" />
-    <title>User Auth System</title>
+    <title>User Authentication System</title>
     
     <!-- Preload fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
